--- a/components/sidebarCart.scss
+++ b/components/sidebarCart.scss
@@ -37,7 +37,7 @@
   -webkit-box-shadow: 0px 6px 5px 2px rgba(44,50,57,0.2);
   -moz-box-shadow: 0px 6px 5px 2px rgba(44,50,57,0.2);
   box-shadow: 0px 6px 5px 2px rgba(44,50,57,0.2);
-  max-width: 385px;
+  max-width: 368px;
   margin-bottom: 15px;
   border-radius: 16px;
   border: 1px solid $grey-50;
